2010-09-22  Chris Rogers  <crogers@google.com>

        Reviewed by James Robinson.

        Add HRTFKernel files
        https://bugs.webkit.org/show_bug.cgi?id=45863

        No new tests since audio API is not yet implemented.

        * platform/audio/HRTFKernel.cpp: Added.
        (WebCore::extractAverageGroupDelay):
        (WebCore::HRTFKernel::HRTFKernel):
        (WebCore::HRTFKernel::createImpulseResponse):
        (WebCore::HRTFKernel::createInterpolatedKernel):
        * platform/audio/HRTFKernel.h: Added.
        (WebCore::HRTFKernel::create):
        (WebCore::HRTFKernel::fftFrame):
        (WebCore::HRTFKernel::fftSize):
        (WebCore::HRTFKernel::frameDelay):
        (WebCore::HRTFKernel::sampleRate):
        (WebCore::HRTFKernel::nyquist):
        (WebCore::HRTFKernel::HRTFKernel):

2010-09-22  Kent Tamura  <tkent@chromium.org>

        Reviewed by Chris Fleizach.

        Support keyboard operations for <input type=range>.
        https://bugs.webkit.org/show_bug.cgi?id=45803

        Increasing the value with Up/Right arrow keys by its step value,
        and decreasing with Down/Left arrow keys. If an input element has
        step=any attribute, increasing/decreasing by 1/100 of max-min.

        Note: This change is not useful on Mac because users can't set
        focus on range controls.

        Test: fast/forms/range-keyoperation.html

        * html/HTMLInputElement.cpp:
        (WebCore::HTMLInputElement::defaultEventHandler):
          Calls handleKeyEventForRange() for RANGE and key events.
        (WebCore::HTMLInputElement::handleKeyEventForRange):
        * html/HTMLInputElement.h: Add handleKeyEventForRange() declaration.

2010-09-22  Mario Sanchez Prada  <msanchez@igalia.com>

        Reviewed by Chris Fleizach.

        [Gtk] Incorrect exposure of list items whose children are elements
        https://bugs.webkit.org/show_bug.cgi?id=45383

        Set ATK_ROLE_LIST_ITEM looking for the role of the parent object
