@@ -1,3 +1,15 @@
+2010-09-22  Kwang Yul Seo  <skyul@company100.net>
+
+        Reviewed by Kent Tamura.
+
+        [BREWMP] Implement Image::loadPlatformResource
+        https://bugs.webkit.org/show_bug.cgi?id=45873
+
+        Load images from the resource directory.
+
+        * platform/graphics/brew/ImageBrew.cpp: Added.
+        (WebCore::Image::loadPlatformResource):
+
 2010-09-22  Chris Rogers  <crogers@google.com>
 
         Reviewed by James Robinson.
